refactor: remove deprecated modules, add nodemon and eslint
Signed-off-by: stewie <donghuuhieu1520@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development && node main.js"
+    "start": "nodemon --exec npm-run-all --sequential eslint dev",
+    "eslint": "eslint --format node_modules/eslint-friendly-formatter main.js src/",
+    "dev": "cross-env NODE_ENV=development node --inspect=0.0.0.0:9228 main.js",
+    "seed": "node ./src/seeds/index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/load-files": "^6.3.2",
+    "@graphql-tools/merge": "^7.0.0",
+    "@graphql-tools/schema": "^8.0.3",
     "config": "^3.3.6",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -17,18 +23,20 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "glob": "^7.1.7",
     "graphql": "^15.5.1",
-    "graphql-tools": "^8.1.0",
     "lodash": "^4.17.21",
-    "merge-graphql-schemas": "^1.7.8",
     "module-alias": "^2.2.2",
     "mongoose": "^5.13.5"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-friendly-formatter": "^4.0.1",
     "eslint-import-resolver-custom-alias": "^1.2.0",
-    "eslint-plugin-import": "^2.23.4"
+    "eslint-plugin-import": "^2.23.4",
+    "nodemon": "^2.0.12",
+    "npm-run-all": "^4.1.5"
   },
   "_moduleAliases": {
     "@": "./src"
