--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
         "ecmaVersion": 12
     },
     "rules": {
+        "no-console": "off"
     },
     "settings": {
         "import/resolver": {
