--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "morgan": "^1.10.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
