feat: api signup user
Signed-off-by: stewie <donghuuhieu1520@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 SESSION_SECRET=verySecretSessionSecret123
 PORT=3000
+JWT_SECRET=
+ACCESS_TOKEN_EXPIRES_IN=15m
+REFRESH_TOKEN_EXPIRES_IN=1y
 MONGODB_URI=
